# pixelate_image

./: Main.hs  README.org  cabal.sandbox.config  pix.cabal
