name:                pix
version:             0.1.0.0
synopsis:            pixelating lock screen
author:              Miles Frankel
maintainer:          miles.frankel@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable pix
  main-is:             Main.hs
  ghc-options:         -O2 -fwarn-unused-imports -threaded
  build-depends:       base >=4.6 && <4.9
                     , friday >= 0.2.1.1
                     , friday-devil >= 0.1.1.1
                     , process >= 1.2.0
                     , random
  default-language:    Haskell2010
